[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qzone-text-exporter"
version = "0.1.0"
description = "Export QQ Qzone blog posts to local plain-text files with privacy-first postprocessing."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Contributors"}]
keywords = ["qzone", "qq", "export", "backup", "privacy", "plaintext", "diary"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/<YOUR_ORG_OR_USER>/qzone-text-exporter"
Repository = "https://github.com/<YOUR_ORG_OR_USER>/qzone-text-exporter"

[project.scripts]
qzone-text-exporter = "qzone_text_exporter.cli:main"

[tool.setuptools]
packages = ["qzone_text_exporter"]

